css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

* {
  margin: auto;
  padding: 0;
  /* color: #000; */
  color: #333333;
  font-family: "Asap", sans-serif;
}

body {
  background-color: #f7f8ea;
}

html {
  scroll-behavior: auto;
}

.container {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  text-align: center;
  width: 100%;
}

.content-wrapper {
  width: 85%;
}

.buttons {
  display: flex;
  justify-self: space-between;
  align-items: center;
  background-color: #d3f1f5;
  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.15);
  padding: 3%;
}

.home-button {
  font-size: 1.05em;
  width: 20%;
  border-radius: 25px;
  position: fixed;
  bottom: 2%;
  right: 2%;
  cursor: pointer;
  padding: 10px;
}

.footer-button {
  font-size: 1.05em;
  width: 20%;
  border-radius: 25px;
  position: fixed;
  bottom: 2%;
  left: 2%;
  cursor: pointer;
  padding: 10px;
}

.dark-mode {
  font-size: 1.05em;
  width: 75%;
  border-radius: 25px;
  background-color: #181818;
  color: #b3b3b3;
  padding: 2%;
}

.light-mode {
  background-color: #b3b3b3;
  color: #000;
}

.filter {
  font-size: 1.05em;
}

.filter-option {
  font-size: 0.75em;
}

.hide {
  display: none;
}

.logo-style {
  width: 40%;
}

.header-art-style {
  width: 90%;
  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.15);
}

.caption {
  font-size: 1.2rem;
  padding-top: 2%;
  padding-bottom: 2%;
  font-style: italic;
}

.video-link {
  text-decoration: none;
}

.peep-img {
  width: 50%;
  box-shadow: 0.15rem 0.15rem 0.15rem 0.15rem rgba(0, 0, 0, 0.1);
  aspect-ratio: 1/1;
  object-fit: contain;
}

h1 {
  font-size: 2.25rem;
  font-weight: 500;
}

h2 {
  font-size: 1.65rem;
  padding-top: 20px;
  padding-bottom: 20px;
  font-weight: lighter;
}

h3 {
  padding: 1rem 0 1rem 0;
  font-weight: 400;
}

.peeps-link {
  font-size: 1.15rem;
}

li {
  font-size: 1.25rem;
  font-weight: 200;
  width: 90%;
  padding-top: 5%;
  padding-bottom: 5%;
}

p {
  padding-bottom: 5%;
}

.peep-title {
  font-weight: 530;
}

.dark-mode-theme {
  background-color: #181818;
  color: #b3b3b3;
}

.dark-mode-theme a:visited {
  color: #b3b3b3;
}

.dark-mode-theme .buttons {
  background-color: #3d3d3d;
}

.dark-mode-theme .footer-button {
  background-color: #b3b3b3;
}

.dark-mode-theme .home-button {
  background-color: #b3b3b3;
}

.dark-mode-theme .contact {
  background-color: #3d3d3d;
}

.dark-mode-theme .email {
  color: #b3b3b3;
}

.dark-mode-theme .peep-img {
  box-shadow: none;
}

.dark-mode-theme .select {
  background-color: #b3b3b3;
}

.move-center {
  padding: 0, 0, 0, 30px;
}

footer {
  padding-bottom: 30%;
  padding-top: 15%;
}

.contact {
  margin-bottom: 5%;
  padding-bottom: 5%;
  padding: 5%;
  background-color: #d3f1f5;
  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.15);
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .sr-only class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

/* TABLET STYLES */

@media (min-width: 768px) {
  .buttons {
    font-size: 1.5em;
  }

  .dark-mode {
    width: 30%;
  }

  .filter-option {
    font-size: 0.75rem;
  }

  .caption {
    font-size: 2.15rem;
  }

  h1 {
    font-size: 4.75rem;
  }

  h2 {
    font-size: 3.25rem;
  }

  .peeps-link {
    font-size: 1.75rem;
  }

  li {
    font-size: 2.25rem;
  }

  p {
    padding-bottom: 10%;
  }

  img {
    width: 75%;
  }

  .peep-img {
    width: 50%;
  }

  footer {
    padding-bottom: 30%;
    padding-top: 15%;
  }

  .contact {
    font-size: 1.75rem;
    padding: 5%;
  }
}

/* DESKTOP STYLES */

@media (min-width: 1200px) {
  .buttons {
    font-size: 1rem;
  }

  .logo-style {
    width: 25%;
  }

  .home-button {
    width: 10%;
  }

  .dark-mode {
    width: 15%;
    padding: 1%;
  }

  .footer-button {
    width: 10%;
  }

  .filter-option {
    font-size: 1rem;
  }

  .caption {
    font-size: 1.5rem;
  }

  h1 {
    font-size: 3.25rem;
    margin: 3% 0;
  }

  h2 {
    font-size: 2.5rem;
  }

  ol {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
  }

  .peep {
    width: 30%;
    margin: 1%;
    text-align: left;
  }

  .peep-img {
    width: 50%;
  }

  .header-art-style {
    width: 50%;
  }

  .peep {
    font-size: 1.5rem;
  }

  footer {
    width: 50%;
    padding-bottom: 5%;
    padding-top: 5%;
  }

  .contact {
    font-size: 1.25rem;
    margin-bottom: 5%;
  }
}

@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}

@media print,
  (-webkit-min-device-pixel-ratio: 1.25),
  (min-resolution: 1.25dppx),
  (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
  *,
  *::before,
  *::after {
    background: #fff !important;
    color: #000 !important;
    /* Black prints faster */
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a,
  a:visited {
    text-decoration: underline;
  }

  a[href]::after {
    content: " (" attr(href) ")";
  }

  abbr[title]::after {
    content: " (" attr(title) ")";
  }

  /*
   * Don't show links that are fragment identifiers,
   * or use the `javascript:` pseudo protocol
   */
  a[href^="#"]::after,
  a[href^="javascript:"]::after {
    content: "";
  }

  pre {
    white-space: pre-wrap !important;
  }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  /*
   * Printing Tables:
   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
   */
  thead {
    display: table-header-group;
  }

  tr,
  img {
    page-break-inside: avoid;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3 {
    page-break-after: avoid;
  }
}

